nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nats
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nats
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\kompose\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/internal: "true"
        io.kompose.service: nats
    spec:
      containers:
      - image: nats:2
        imagePullPolicy: ""
        name: nats
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
