products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: products
  name: products
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: products
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\kompose\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/internal: "true"
        io.kompose.service: products
    spec:
      containers:
      - env:
        - name: LOGGER
          valueFrom:
            configMapKeyRef:
              key: LOGGER
              name: docker-compose-env
        - name: LOGLEVEL
          valueFrom:
            configMapKeyRef:
              key: LOGLEVEL
              name: docker-compose-env
        - name: MONGO_URI
          valueFrom:
            configMapKeyRef:
              key: MONGO_URI
              name: docker-compose-env
        - name: NAMESPACE
          valueFrom:
            configMapKeyRef:
              key: NAMESPACE
              name: docker-compose-env
        - name: SERVICEDIR
          valueFrom:
            configMapKeyRef:
              key: SERVICEDIR
              name: docker-compose-env
        - name: SERVICES
          value: products
        - name: TRANSPORTER
          valueFrom:
            configMapKeyRef:
              key: TRANSPORTER
              name: docker-compose-env
        image: nord-dns
        imagePullPolicy: Never
        name: products
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
