traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: traefik
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\kompose\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/default: "true"
        io.kompose.network/internal: "true"
        io.kompose.service: traefik
    spec:
      containers:
      - args:
        - --api.insecure=true
        - --providers.docker=true
        - --providers.docker.exposedbydefault=false
        image: traefik:v2.1
        imagePullPolicy: ""
        name: traefik
        ports:
        - containerPort: 80
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: traefik-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: traefik-claim0
        persistentVolumeClaim:
          claimName: traefik-claim0
          readOnly: true
status: {}
