traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 80
  - name: "3001"
    port: 3001
    targetPort: 8080
  selector:
    io.kompose.service: traefik
status:
  loadBalancer: {}
